--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-82687XMTH1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-82687XMTH1');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🤖 How GPT Works - Complete Journey!</title>
@@ -8,6 +16,9 @@
     <link rel="stylesheet" href="src/css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+        <link rel="shortcut icon" href="./favicon.ico" media="(prefers-color-scheme: dark)"/>
+	<link rel="shortcut icon" href="./favicon.ico" media="(prefers-color-scheme: light)" />
+   
 </head>
 <body>
     <div class="progress-bar" id="progress"></div>
